--- a/AutomationDemo/lib/build.gradle
+++ b/AutomationDemo/lib/build.gradle
@@ -1,8 +1,8 @@
 // AutomationDemo 04 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+apply plugin: "java"
+apply plugin: "eclipse"
+apply plugin: "org.springframework.boot"
+apply plugin: "io.spring.dependency-management"
 
 buildscript {
 	repositories {
@@ -45,9 +45,23 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.5.3'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-devtools'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
+	
+	// orms start
+	// mybatis
+	implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.2.0'
+	implementation group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.4.0'
+	implementation group: 'org.mybatis', name: 'mybatis-typehandlers-jsr310', version: '1.0.2'
+	
+	// mysql
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
 	
 	// commons
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+	implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+	implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
+	implementation group: 'org.apache.commons', name: 'commons-pool2', version: '2.9.0'
 	
 	// selenium
 	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
