--- a/AutomationDemo/lib/src/main/resources/application.yml
+++ b/AutomationDemo/lib/src/main/resources/application.yml
@@ -10,7 +10,12 @@ spring:
       charset: UTF-8 # 指定程序编码
       enabled: true
       force: true
-    
+  datasource:
+    database1:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://127.0.0.1:3306/database1?characterEncoding=utf8&useUnicode=true&useLegacyDatetimeCode=false&useTimezone=true&serverTimezone=GMT%2B8&autoReconnect=true&useSSL=false&useServerPrepStmts=true&allowMultiQueries=true
+      username: root
+      password: test
     
 logging: # 日志相关配置
   level: 
